[project]
name = "twitterbackup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=2.0.0",
    "flask-sqlalchemy>=2.5.0",
    "gallery-dl>=1.30.5",
    "openai>=1.0.0",
    "pandas>=1.5.0",
    "pathlib2>=2.3.5",
    "requests>=2.25.1",
    "streamlit>=1.28.0",
]
